2005-04-07  Chris Burdess  <dog@gnu.org>

	* gnu/java/net/CRLFInputStream.java: Rewrite to return
	CRLF-delimited chunks.

2005-04-07  Roman Kennke  <roman@kennke.org>

	* javax/swing/UIDefaults.java:
	Added API documentation for all methods.

2005-04-06  Roman Kennke  <roman@kennke.org>

	* javax/swing/UIDefaults.java
	(put): Now uses new checkAndPut method instead of checking
	directly.
	(putDefaults): Fixed so that it accepts null-values and
	treats them like remove(key).
	(checkAndPut): Added. This checks for null-values and calls
	put or remove.

2005-04-06   Audrius Meskauskas  <audriusa@bluewin.ch>

	* org/omg/CORBA/CTX_RESTRICT_SCOPE.java,
	org/omg/CORBA/ExceptionList.java,
	org/omg/CORBA/NVList.java,
	PrincipalHolder.java: New classes.
	* org/omg/CORBA/Context.java: Completing
	part, dependent from classes above,
	org/omg/CORBA/MARSHAL.java: accessibility fixes.

2005-04-05  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/peer/gtk/GdkScreenGraphicsDevice.java
	(getDisplayMode): Added. Returns the current display mode.
	(isFullScreenSupported): Added.
	* java/awt/GraphicsDevice.java
	(setFullScreenWindow): Implemented a primitive fullscreen mode.
	This resizes and relocates the fullscreen window so that it uses
	the whole screen. This is not a fully accelerated fullscreen
	exclusive mode.

2005-04-03  Guilhem Lavaux  <guilhem@kaffe.org>
	Rei Odaira <ray@is.s.u-tokyo.ac.jp>

	* native/jni/java-nio/gnu_java_nio_VMSelector.c
	(helper_select): Return the error number.
	(Java_gnu_java_nio_VMSelector_select0): If the result is negative
	consider it as the error code. This prevents conflicts between EINTR
	and the number of filedescriptor particularly.

2005-04-03  Guilhem Lavaux  <guilhem@kaffe.org>

	* native/jni/java-nio/gnu_java_nio_VMSelector.c: Reindented.
	
2005-04-01  Tom Tromey  <tromey@redhat.com>

	* java/lang/AssertionError.java: Typo fix.

2005-04-01  Michael Koch  <konqueror@gmx.de>

	* java/io/PipedInputStream.java